# ctk

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  build.sh
src/: io.c  io.h
src/collections/: entries.h  entry.h  list.h  map.h  vector.h
src/file/: file.c  file.h  path.c  path.h
src/math/: aabb.c  aabb.h  math.h  matrix.c  matrix.h  vectors.c  vectors.h
src/types/: option.h  string.c  string.h  types.h
test/: CMakeLists.txt  aabb.c  command.c  file.c  list.c  map.c  matrix.c  path.c  sample.txt  strings.c  vec.c
